// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can set header 1`] = `
<div
  className="relative w-full rounded-lg border px-4 py-3 text-sm [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg~*]:pl-7 border-info/50 text-info dark:border-info [&>svg]:text-info message is-info"
  role="alert"
>
  <h5
    className="mb-1 font-medium leading-none tracking-tight message-header flex justify-between items-center"
  >
    Awesome title
  </h5>
  <div
    className="text-sm [&_p]:leading-relaxed message-body"
  >
    Hellooow
  </div>
</div>
`;

exports[`can set type 1`] = `
<div
  className="relative w-full rounded-lg border px-4 py-3 text-sm [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg~*]:pl-7 border-warning/50 text-warning dark:border-warning [&>svg]:text-warning message is-warning"
  role="alert"
>
  <div
    className="text-sm [&_p]:leading-relaxed message-body"
  >
    Alert !
  </div>
</div>
`;

exports[`render message 1`] = `
<div
  className="relative w-full rounded-lg border px-4 py-3 text-sm [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg~*]:pl-7 border-info/50 text-info dark:border-info [&>svg]:text-info message is-info"
  role="alert"
>
  <div
    className="text-sm [&_p]:leading-relaxed message-body"
  >
    Hello
  </div>
</div>
`;

exports[`without body 1`] = `
<div
  className="relative w-full rounded-lg border px-4 py-3 text-sm [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg~*]:pl-7 border-info/50 text-info dark:border-info [&>svg]:text-info message is-info"
  role="alert"
>
  <div
    className="text-sm [&_p]:leading-relaxed message-body"
  />
</div>
`;
